--- a/progetti/munari2.html
+++ b/progetti/munari2.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <title>Campari</title>
 </head>
 <body>
      <!-- Logo e Nav principale -->
    <header>
-    <h1 class="logo"><a href="/index.html">Designers Studio Boggeri</a></h1>
+    <h1 class="logo"><a href="../index.html">Designers Studio Boggeri</a></h1>
     <nav>
         <ul>
-            <li><a href="/studio.html">Studio</a></li>
-            <li><a href="/designers.html">Designer</a></li>
-            <li><a href="/projects.html">Progetti</a></li>
-            <li><a href="/about.html">About</a></li>
+            <li><a href="../studio.html">Studio</a></li>
+            <li><a href="../designers.html">Designer</a></li>
+            <li><a href="../projects.html">Progetti</a></li>
+            <li><a href="../about.html">About</a></li>
         </ul>
     </nav>
 </header>
@@ -29,7 +29,7 @@
     
     
         <section class="progetto">
-            <img src="/immagini/munari/munari2.jpeg" alt="">
+            <img src="../immagini/munari/munari2.jpeg" alt="">
             <p>Bruno Munari, 1974 <br>Poster</p>
         </section>
    
@@ -38,27 +38,27 @@
         <h2>Altri Progetti</h2>
         <div class="grid">
             <div class="card">
-                <a href="/progetti/munari1.html"> <img src="/immagini/munari/munari1.jpg" alt=""> </a>
+                <a href="munari1.html"> <img src="../immagini/munari/munari1.jpg" alt=""> </a>
                 <p> <strong>Ricerca e progettazione di un simbolo</strong><br>Bruno Munari, 1977 <br>Libro </p>
             </div>
 
             <div class="card">
-                <a href="/progetti/munari3.html"> <img src="/immagini/munari/munari3.jpg" alt=""> </a>
+                <a href="munari3.html"> <img src="../immagini/munari/munari3.jpg" alt=""> </a>
                 <p> <strong>Suole Coria</strong><br>Bruno Munari, 1953 <br>Poster </p>
             </div>
 
             <div class="card">
-                <a href="/progetti/munari4.html"> <img src="/immagini/munari/munari4.jpg" alt=""> </a>
+                <a href="munari4.html"> <img src="../immagini/munari/munari4.jpg" alt=""> </a>
                 <p> <strong>I Satelliti</strong><br>Bruno Munari, 1971 <br>Libro</p>
             </div>
 
             <div class="card">
-                <a href="/progetti/munari5.html"> <img src="/immagini/munari/munari5.webp" alt=""> </a>
+                <a href="munari5.html"> <img src="../immagini/munari/munari5.webp" alt=""> </a>
                 <p> <strong>Libri Illegibili</strong><br>Bruno Munari, 1949 <br>Libro</p>
             </div>
 
             <div class="card">
-                <a href="/progetti/munari6.html"> <img src="/immagini/munari/munari6.jpg" alt=""> </a>
+                <a href="munari6.html"> <img src="../immagini/munari/munari6.jpg" alt=""> </a>
                 <p> <strong>Almanacco Anti-Letterario di Bompiani </strong><br>Bruno Munari, 1937 <br>Periodico</p>
             </div>
 
@@ -68,13 +68,13 @@
 
 
 <footer>
-    <p class="logo"><a href="/index.html">Designers Studio Boggeri</a></p>
+    <p class="logo"><a href="../index.html">Designers Studio Boggeri</a></p>
     <nav>
         <ul>
-            <li><a href="/studio.html">Studio</a></li>
-            <li><a href="/designers.html">Designer</a></li>
-            <li><a href="/projects.html">Progetti</a></li>
-            <li><a href="/about.html">About</a></li>
+            <li><a href="../studio.html">Studio</a></li>
+            <li><a href="../designers.html">Designer</a></li>
+            <li><a href="../projects.html">Progetti</a></li>
+            <li><a href="../about.html">About</a></li>
         </ul>
     </nav>
    </footer>
