--- a/designers/grignani.html
+++ b/designers/grignani.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Document</title>
 </head>
 <body>
         <!-- Logo e Nav principale -->
    <header>
-        <h1 class="logo"><a href="/index.html">Designers Studio Boggeri</a></h1>
+        <h1 class="logo"><a href="../index.html">Designers Studio Boggeri</a></h1>
         <nav>
             <ul>
-                <li><a href="/studio.html">Studio</a></li>
-                <li><a href="/designers.html">Designer</a></li>
-                <li><a href="/projects.html">Progetti</a></li>
-                <li><a href="/about.html">About</a></li>
+                <li><a href="../studio.html">Studio</a></li>
+                <li><a href="../designers.html">Designer</a></li>
+                <li><a href="../projects.html">Progetti</a></li>
+                <li><a href="../about.html">About</a></li>
             </ul>
         </nav>
     </header>
@@ -31,7 +31,7 @@
                 </div>
 
                 <div>
-                    <img class="img-designer" src="/immagini/designer/franco-grignani-foto.png" alt="">
+                    <img class="img-designer" src="../immagini/designer/franco-grignani-foto.png" alt="">
                 </div>
             </div>
         </section>
@@ -42,32 +42,32 @@
         <div class="grid">
             
             <div class="card">
-                <a href="/progetti/grignani1.html"> <img src="/immagini/grignani/grignani1.jpg" alt=""> </a>
+                <a href="../progetti/grignani1.html"> <img src="../immagini/grignani/grignani1.jpg" alt=""> </a>
                 <p> <strong>FIAT 2800</strong><br>Franco Grignani, 1939 <br>Advertising</p>
             </div>
 
             <div class="card">
-                <a href="/progetti/grignani2.html"> <img src="/immagini/grignani/grignani2.jpg" alt=""> </a>
+                <a href="../progetti/grignani2.html"> <img src="../immagini/grignani/grignani2.jpg" alt=""> </a>
                 <p> <strong>Pura Lana Vergine</strong><br>Franco Grignani, 1964 <br>Logotype </p>
             </div>
 
             <div class="card">
-                <a href="/progetti/grignani3.html"> <img src="/immagini/grignani/grignani3.webp" alt=""> </a>
+                <a href="../progetti/grignani3.html"> <img src="../immagini/grignani/grignani3.webp" alt=""> </a>
                 <p> <strong>L'evoluzione della grafica</strong><br>Frasnco Grignani, 1964 <br>Poster</p>
             </div>
 
             <div class="card">
-                <a href="/progetti/grignani4.html"> <img src="/immagini/grignani/grignani4.png" alt=""> </a>
+                <a href="../progetti/grignani4.html"> <img src="../immagini/grignani/grignani4.png" alt=""> </a>
                 <p> <strong>Carte Patinate </strong><br>Franco Grignani, 1965 <br>Catalogue</p>
             </div>
 
             <div class="card">
-                <a href="/progetti/grignani5.html"> <img src="/immagini/grignani/grignani5.jpg" alt=""> </a>
+                <a href="../progetti/grignani5.html"> <img src="../immagini/grignani/grignani5.jpg" alt=""> </a>
                 <p> <strong>Trama e Sintassi</strong><br>Franco Grignani, 1968 <br>Advertising</p>
             </div>
 
             <div class="card">
-                <a href="/progetti/grignani6.html"> <img src="/immagini/grignani/grignani6.jpg" alt=""> </a>
+                <a href="../progetti/grignani6.html"> <img src="../immagini/grignani/grignani6.jpg" alt=""> </a>
                 <p> <strong>Guaiacalcium Efedrina </strong><br>Franco Grignani, 1953 <br>Advertising</p>
             </div>
         </div>
@@ -75,13 +75,13 @@
     </main>
 
     <footer>
-        <p class="logo"><a href="/index.html">Designers Studio Boggeri</a></p>
+        <p class="logo"><a href="../index.html">Designers Studio Boggeri</a></p>
         <nav>
             <ul>
-                <li><a href="/studio.html">Studio</a></li>
-                <li><a href="/designers.html">Designer</a></li>
-                <li><a href="/projects.html">Progetti</a></li>
-                <li><a href="/about.html">About</a></li>
+                <li><a href="../studio.html">Studio</a></li>
+                <li><a href="../designers.html">Designer</a></li>
+                <li><a href="../projects.html">Progetti</a></li>
+                <li><a href="../about.html">About</a></li>
             </ul>
         </nav>
        </footer>
