--- a/designers/huber.html
+++ b/designers/huber.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Document</title>
 </head>
 <body>
         <!-- Logo e Nav principale -->
    <header>
-        <h1 class="logo"><a href="/index.html">Designers Studio Boggeri</a></h1>
+        <h1 class="logo"><a href="../index.html">Designers Studio Boggeri</a></h1>
         <nav>
             <ul>
-                <li><a href="/studio.html">Studio</a></li>
-                <li><a href="/designers.html">Designer</a></li>
-                <li><a href="/projects.html">Progetti</a></li>
-                <li><a href="/about.html">About</a></li>
+                <li><a href="../studio.html">Studio</a></li>
+                <li><a href="../designers.html">Designer</a></li>
+                <li><a href="../projects.html">Progetti</a></li>
+                <li><a href="../about.html">About</a></li>
             </ul>
         </nav>
     </header>
@@ -31,7 +31,7 @@
                 </div>
 
                 <div>
-                    <img class="img-designer" src="/immagini/designer/max-huber.png" alt="">
+                    <img class="img-designer" src="../immagini/designer/max-huber.png" alt="">
                 </div>
             </div>
         </section>
@@ -42,32 +42,32 @@
         <div class="grid">
             
             <div class="card">
-                <a href="/progetti/huber1.html"> <img src="/immagini/huber/huber1.jpg" alt=""> </a>
+                <a href="../progetti/huber1.html"> <img src="../immagini/huber/huber1.jpg" alt=""> </a>
                 <p> <strong>La Rinascente</strong><br>Max Huber, 1951 <br>Poster </p>
             </div>
 
             <div class="card">
-                <a href="/progetti/huber2.html"> <img src="/immagini/huber/huber2.jpg" alt=""> </a>
+                <a href="../progetti/huber2.html"> <img src="../immagini/huber/huber2.jpg" alt=""> </a>
                 <p> <strong>Autodromo di Monza</strong><br>Max Huber, 1948 <br>Poster </p>
             </div>
 
             <div class="card">
-                <a href="/progetti/huber3.html"> <img src="/immagini/huber/huber3.jpg" alt=""> </a>
+                <a href="../progetti/huber3.html"> <img src="../immagini/huber/huber3.jpg" alt=""> </a>
                 <p> <strong>La Rinascente </strong><br>Max Huber, 1950 <br>Packaging </p>
             </div>
 
             <div class="card">
-                <a href="/progetti/huber4.html"> <img src="/immagini/huber/huber4.jpg" alt=""> </a>
+                <a href="../progetti/huber4.html"> <img src="../immagini/huber/huber4.jpg" alt=""> </a>
                 <p> <strong>Jazztime </strong><br>Max Huber, 1952 <br>Poster</p>
             </div>
 
             <div class="card">
-                <a href="/progetti/huber5.html"> <img src="/immagini/huber/huber5.png" alt=""> </a>
+                <a href="../progetti/huber5.html"> <img src="../immagini/huber/huber5.png" alt=""> </a>
                 <p> <strong>Coin</strong><br>Max Huber, 1955 <br>Logotype </p>
             </div>
 
             <div class="card">
-                <a href="/progetti/huber6.html"> <img src="/immagini/huber/huber6.jpg" alt=""> </a>
+                <a href="../progetti/huber6.html"> <img src="../immagini/huber/huber6.jpg" alt=""> </a>
                 <p> <strong>Borsalino </strong><br>Max Huber, 1950 <br>Poster</p>
             </div>
         </div>
@@ -75,13 +75,13 @@
     </main>
 
     <footer>
-        <p class="logo"><a href="/index.html">Designers Studio Boggeri</a></p>
+        <p class="logo"><a href="../index.html">Designers Studio Boggeri</a></p>
         <nav>
             <ul>
-                <li><a href="/studio.html">Studio</a></li>
-                <li><a href="/designers.html">Designer</a></li>
-                <li><a href="/projects.html">Progetti</a></li>
-                <li><a href="/about.html">About</a></li>
+                <li><a href="../studio.html">Studio</a></li>
+                <li><a href="../designers.html">Designer</a></li>
+                <li><a href="../projects.html">Progetti</a></li>
+                <li><a href="../about.html">About</a></li>
             </ul>
         </nav>
        </footer>
