--- a/designers/munari.html
+++ b/designers/munari.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Document</title>
 </head>
 <body>
         <!-- Logo e Nav principale -->
    <header>
-        <h1 class="logo"><a href="/index.html">Designers Studio Boggeri</a></h1>
+        <h1 class="logo"><a href="../index.html">Designers Studio Boggeri</a></h1>
         <nav>
             <ul>
-                <li><a href="/studio.html">Studio</a></li>
-                <li><a href="/designers.html">Designer</a></li>
-                <li><a href="/projects.html">Progetti</a></li>
-                <li><a href="/about.html">About</a></li>
+                <li><a href="../studio.html">Studio</a></li>
+                <li><a href="../designers.html">Designer</a></li>
+                <li><a href="../projects.html">Progetti</a></li>
+                <li><a href="../about.html">About</a></li>
             </ul>
         </nav>
     </header>
@@ -31,7 +31,7 @@
                 </div>
 
                 <div>
-                    <img class="img-designer" src="/immagini/designer/Munari.png" alt="">
+                    <img class="img-designer" src="../immagini/designer/Munari.png" alt="">
                 </div>
             </div>
         </section>
@@ -42,32 +42,32 @@
         <div class="grid">
             
             <div class="card">
-                <a href="/progetti/munari1.html"> <img src="/immagini/munari/munari1.jpg" alt=""> </a>
+                <a href="../progetti/munari1.html"> <img src="../immagini/munari/munari1.jpg" alt=""> </a>
                 <p> <strong>Ricerca e progettazione di un simbolo</strong><br>Bruno Munari, 1977 <br>Libro </p>
             </div>
 
             <div class="card">
-                <a href="/progetti/munari2.html"> <img src="/immagini/munari/munari2.jpeg" alt=""> </a>
+                <a href="../progetti/munari2.html"> <img src="../immagini/munari/munari2.jpeg" alt=""> </a>
                 <p> <strong>Campari</strong><br>Bruno Munari, 1974 <br>Poster </p>
             </div>
 
             <div class="card">
-                <a href="/progetti/munari3.html"> <img src="/immagini/munari/munari3.jpg" alt=""> </a>
+                <a href="../progetti/munari3.html"> <img src="../immagini/munari/munari3.jpg" alt=""> </a>
                 <p> <strong>Suole Coria</strong><br>Bruno Munari, 1953 <br>Poster </p>
             </div>
 
             <div class="card">
-                <a href="/progetti/munari4.html"> <img src="/immagini/munari/munari4.jpg" alt=""> </a>
+                <a href="../progetti/munari4.html"> <img src="../immagini/munari/munari4.jpg" alt=""> </a>
                 <p> <strong>I Satelliti </strong><br>Bruno Munari, 1971 <br>Libro</p>
             </div>
 
             <div class="card">
-                <a href="/progetti/munari5.html"> <img src="/immagini/munari/munari5.webp" alt=""> </a>
+                <a href="../progetti/munari5.html"> <img src="../immagini/munari/munari5.webp" alt=""> </a>
                 <p> <strong>Libri Illegibili</strong><br>Bruno Munari, 1949 <br>Libro </p>
             </div>
 
             <div class="card">
-                <a href="/progetti/munari6.html"> <img src="/immagini/munari/munari6.jpg" alt=""> </a>
+                <a href="../progetti/munari6.html"> <img src="../immagini/munari/munari6.jpg" alt=""> </a>
                 <p> <strong>Almanacco Anti-Letterario di Bompiani </strong><br>Bruno Munari, 1937 <br>Periodico</p>
             </div>
         </div>
@@ -75,13 +75,13 @@
     </main>
 
     <footer>
-        <p class="logo"><a href="/index.html">Designers Studio Boggeri</a></p>
+        <p class="logo"><a href="../index.html">Designers Studio Boggeri</a></p>
         <nav>
             <ul>
-                <li><a href="/studio.html">Studio</a></li>
-                <li><a href="/designers.html">Designer</a></li>
-                <li><a href="/projects.html">Progetti</a></li>
-                <li><a href="/about.html">About</a></li>
+                <li><a href="../studio.html">Studio</a></li>
+                <li><a href="../designers.html">Designer</a></li>
+                <li><a href="../projects.html">Progetti</a></li>
+                <li><a href="../about.html">About</a></li>
             </ul>
         </nav>
        </footer>
