--- a/designers/steiner.html
+++ b/designers/steiner.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Document</title>
 </head>
 <body>
         <!-- Logo e Nav principale -->
    <header>
-        <h1 class="logo"><a href="/index.html">Designers Studio Boggeri</a></h1>
+        <h1 class="logo"><a href="../index.html">Designers Studio Boggeri</a></h1>
         <nav>
             <ul>
-                <li><a href="/studio.html">Studio</a></li>
-                <li><a href="/designers.html">Designer</a></li>
-                <li><a href="/projects.html">Progetti</a></li>
-                <li><a href="/about.html">About</a></li>
+                <li><a href="../studio.html">Studio</a></li>
+                <li><a href="../designers.html">Designer</a></li>
+                <li><a href="../projects.html">Progetti</a></li>
+                <li><a href="../about.html">About</a></li>
             </ul>
         </nav>
     </header>
@@ -32,7 +32,7 @@
                 </div>
 
                 <div>
-                    <img class="img-designer" src="/immagini/designer/albe-steiner-foto.png" alt="">
+                    <img class="img-designer" src="../immagini/designer/albe-steiner-foto.png" alt="">
                 </div>
             </div>
         </section>
@@ -43,32 +43,32 @@
         <div class="grid">
             
             <div class="card">
-                <a href="/progetti/steiner3.html"> <img src="/immagini/steiner/t14-steiner.png" alt=""> </a>
+                <a href="../progetti/steiner3.html"> <img src="../immagini/steiner/t14-steiner.png" alt=""> </a>
                 <p> <strong>T14 </strong><br>Albe Steiner, 1968 <br>Serie di poster </p>
             </div>
 
             <div class="card">
-                <a href="/progetti/steiner4.html"> <img src="/immagini/steiner/coop-steiner.png" alt=""> </a>
+                <a href="../progetti/steiner4.html"> <img src="../immagini/steiner/coop-steiner.png" alt=""> </a>
                 <p> <strong>Coop 1 </strong><br>Albe Steiner, 1963 <br>Poster </p>
             </div>
 
             <div class="card">
-                <a href="/progetti/steiner5.html"> <img src="/immagini/steiner/interiors-steiner.png" alt=""> </a>
+                <a href="../progetti/steiner5.html"> <img src="../immagini/steiner/interiors-steiner.png" alt=""> </a>
                 <p> <strong>Interiors </strong><br>Albe Steiner, 1948 <br>Periodico </p>
             </div>
 
             <div class="card">
-                <a href="/progetti/steiner2.html"> <img src="/immagini/steiner/pirelli-adv-steiner.png" alt=""> </a>
+                <a href="../progetti/steiner2.html"> <img src="../immagini/steiner/pirelli-adv-steiner.png" alt=""> </a>
                 <p> <strong>Contenitori Pirelli </strong><br>Albe Steiner, 1959 <br>Advertising </p>
             </div>
 
             <div class="card">
-                <a href="/progetti/steiner6.html"> <img src="/immagini/steiner/ORO.jpg" alt=""> </a>
+                <a href="../progetti/steiner6.html"> <img src="../immagini/steiner/ORO.jpg" alt=""> </a>
                 <p> <strong>Compasso d'Oro </strong><br>Albe Steiner, 1954 <br>Marchio </p>
             </div>
 
             <div class="card">
-                <a href="/progetti/steiner1.html"> <img src="/immagini/steiner/cnl-steiner-poster.png" alt=""> </a>
+                <a href="../progetti/steiner1.html"> <img src="../immagini/steiner/cnl-steiner-poster.png" alt=""> </a>
                 <p> <strong>Mostra della Ricostruzione </strong><br>Albe Steiner, 1945 <br>Poster </p>
             </div>
         </div>
@@ -76,13 +76,13 @@
     </main>
 
     <footer>
-        <p class="logo"><a href="/index.html">Designers Studio Boggeri</a></p>
+        <p class="logo"><a href="../index.html">Designers Studio Boggeri</a></p>
         <nav>
             <ul>
-                <li><a href="/studio.html">Studio</a></li>
-                <li><a href="/designers.html">Designer</a></li>
-                <li><a href="/projects.html">Progetti</a></li>
-                <li><a href="/about.html">About</a></li>
+                <li><a href="../studio.html">Studio</a></li>
+                <li><a href="../designers.html">Designer</a></li>
+                <li><a href="../projects.html">Progetti</a></li>
+                <li><a href="../about.html">About</a></li>
             </ul>
         </nav>
        </footer>
