--- a/progetti/ballmer1.html
+++ b/progetti/ballmer1.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <title>Stile Olivetti</title>
 </head>
 <body>
      <!-- Logo e Nav principale -->
    <header>
-    <h1 class="logo"><a href="/index.html">Designers Studio Boggeri</a></h1>
+    <h1 class="logo"><a href="../index.html">Designers Studio Boggeri</a></h1>
     <nav>
         <ul>
-            <li><a href="/studio.html">Studio</a></li>
-            <li><a href="/designers.html">Designer</a></li>
-            <li><a href="/projects.html">Progetti</a></li>
-            <li><a href="/about.html">About</a></li>
+            <li><a href="../studio.html">Studio</a></li>
+            <li><a href="../designers.html">Designer</a></li>
+            <li><a href="../projects.html">Progetti</a></li>
+            <li><a href="../about.html">About</a></li>
         </ul>
     </nav>
 </header>
@@ -29,7 +29,7 @@
     
     
         <section class="progetto">
-            <img src="/immagini/ballmer/ballmer1.jpg" alt="">
+            <img src="../immagini/ballmer/ballmer1.jpg" alt="">
             <p>Walter Ballmer, 1961<br>Poster</p>
         </section>
    
@@ -38,12 +38,12 @@
         <h2>Altri Progetti</h2>
         <div class="grid">
             <div class="card">
-                <a href="/progetti/ballmer2.html"> <img src="/immagini/ballmer/ballmer2.webp" alt=""> </a>
+                <a href="ballmer2.html"> <img src="../immagini/ballmer/ballmer2.webp" alt=""> </a>
                 <p> <strong>Lettera 32</strong><br>Walter Ballmer, 1968 <br>Poster </p>
             </div>
 
             <div class="card">
-                <a href="/progetti/ballmer3.html"> <img src="/immagini/ballmer/ballmer3.jpg" alt=""> </a>
+                <a href="ballmer3.html"> <img src="../immagini/ballmer/ballmer3.jpg" alt=""> </a>
                 <p> <strong>Olivetti</strong><br>Walter Ballmer, 1975 <br>Poster </p>
             </div>
         </div>
@@ -52,13 +52,13 @@
 
 
 <footer>
-    <p class="logo"><a href="/index.html">Designers Studio Boggeri</a></p>
+    <p class="logo"><a href="../index.html">Designers Studio Boggeri</a></p>
     <nav>
         <ul>
-            <li><a href="/studio.html">Studio</a></li>
-            <li><a href="/designers.html">Designer</a></li>
-            <li><a href="/projects.html">Progetti</a></li>
-            <li><a href="/about.html">About</a></li>
+            <li><a href="../studio.html">Studio</a></li>
+            <li><a href="../designers.html">Designer</a></li>
+            <li><a href="../projects.html">Progetti</a></li>
+            <li><a href="../about.html">About</a></li>
         </ul>
     </nav>
    </footer>
