--- a/progetti/grignani2.html
+++ b/progetti/grignani2.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <title>Pura Lana Vergine</title>
 </head>
 <body>
      <!-- Logo e Nav principale -->
    <header>
-    <h1 class="logo"><a href="/index.html">Designers Studio Boggeri</a></h1>
+    <h1 class="logo"><a href="../index.html">Designers Studio Boggeri</a></h1>
     <nav>
         <ul>
-            <li><a href="/studio.html">Studio</a></li>
-            <li><a href="/designers.html">Designer</a></li>
-            <li><a href="/projects.html">Progetti</a></li>
-            <li><a href="/about.html">About</a></li>
+            <li><a href="../studio.html">Studio</a></li>
+            <li><a href="../designers.html">Designer</a></li>
+            <li><a href="../projects.html">Progetti</a></li>
+            <li><a href="../about.html">About</a></li>
         </ul>
     </nav>
 </header>
@@ -30,7 +30,7 @@
     
     
         <section class="progetto">
-            <img src="/immagini/grignani/grignani2.jpg" alt="">
+            <img src="../immagini/grignani/grignani2.jpg" alt="">
             <p>Franco Grignani, 1964 <br>Logotype</p>
         </section>
    
@@ -39,27 +39,27 @@
         <h2>Altri Progetti</h2>
         <div class="grid">
             <div class="card">
-                <a href="/progetti/grignani1.html"> <img src="/immagini/grignani/grignani1.jpg" alt=""> </a>
+                <a href="grignani1.html"> <img src="../immagini/grignani/grignani1.jpg" alt=""> </a>
                 <p> <strong>FIAT 2800</strong><br>Franco Grignani, 1939 <br>Advertising </p>
             </div>
 
             <div class="card">
-                <a href="/progetti/grignani3.html"> <img src="/immagini/grignani/grignani3.webp" alt=""> </a>
+                <a href="grignani3.html"> <img src="../immagini/grignani/grignani3.webp" alt=""> </a>
                 <p> <strong>L'evoluzione della grafica</strong><br>Franco Grignani, 1964 <br>Logotype </p>
             </div>
 
             <div class="card">
-                <a href="/progetti/grignani4.html"> <img src="/immagini/grignani/grignani4.png" alt=""> </a>
+                <a href="grignani4.html"> <img src="../immagini/grignani/grignani4.png" alt=""> </a>
                 <p> <strong>Carte Patinate</strong><br>Franco Grignani, 1965 <br>Advertising </p>
             </div>
 
             <div class="card">
-                <a href="/progetti/grignani5.html"> <img src="/immagini/grignani/grignani5.jpg" alt=""> </a>
+                <a href="grignani5.html"> <img src="../immagini/grignani/grignani5.jpg" alt=""> </a>
                 <p> <strong>Trama e Sintassi</strong><br>Franco Grignani, 1968 <br>Advertising</p>
             </div>
 
             <div class="card">
-                <a href="/progetti/grignani6.html"> <img src="/immagini/grignani/grignani6.jpg" alt=""> </a>
+                <a href="grignani6.html"> <img src="../immagini/grignani/grignani6.jpg" alt=""> </a>
                 <p> <strong>Guaiacalcium Efedrina </strong><br>Franco Grignani, 1953 <br>Advertising </p>
             </div>
 
@@ -69,13 +69,13 @@
 
 
 <footer>
-    <p class="logo"><a href="/index.html">Designers Studio Boggeri</a></p>
+    <p class="logo"><a href="../index.html">Designers Studio Boggeri</a></p>
     <nav>
         <ul>
-            <li><a href="/studio.html">Studio</a></li>
-            <li><a href="/designers.html">Designer</a></li>
-            <li><a href="/projects.html">Progetti</a></li>
-            <li><a href="/about.html">About</a></li>
+            <li><a href="../studio.html">Studio</a></li>
+            <li><a href="../designers.html">Designer</a></li>
+            <li><a href="../projects.html">Progetti</a></li>
+            <li><a href="../about.html">About</a></li>
         </ul>
     </nav>
    </footer>
