--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,7 @@
     <title>Progetti</title>
 </head>
 <body>
+    
 
 
 
@@ -23,7 +24,7 @@
             </ul>
         </nav>
     </header>
-
+    <main>
 
 <section class="categorie">
     <h2>Progetti</h2>
@@ -57,6 +58,18 @@
             <p> <strong> Napoli </strong><br> Armando Milani, 1984 <br> Poster</p>
         </div>
 
+        <div class="categoria categoria-3 card">
+            <a href=""> <img src="immagini/milani/peace-war-milani.png" alt=""> </a>
+            <p> <strong>Peace</strong><br>Armando Milani, 2003 <br> Poster </p>
+        </div>
+        <div class="categoria categoria-3 card">
+            <a href=""> <img src="immagini/milani/peace-war-milani.png" alt=""> </a>
+            <p> <strong>Peace</strong><br>Armando Milani, 2003 <br> Poster </p>
+        </div>
+        <div class="categoria categoria-3 card">
+            <a href=""> <img src="immagini/milani/peace-war-milani.png" alt=""> </a>
+            <p> <strong>Peace</strong><br>Armando Milani, 2003 <br> Poster </p>
+        </div>
         <div class="categoria categoria-3 card">
             <a href=""> <img src="immagini/milani/peace-war-milani.png" alt=""> </a>
             <p> <strong>Peace</strong><br>Armando Milani, 2003 <br> Poster </p>
@@ -294,5 +307,6 @@
             </ul>
         </nav>
        </footer>
+    </main>
 </body>
 </html>
