--- a/studio.html
+++ b/studio.html
@@ -21,6 +21,7 @@
         </nav>
     </header>
 
+    <main>
     <section class="studio">
         <div class="flex">
             <div class="testo">
@@ -50,6 +51,7 @@
             </div>
         </div>
     </section>
+</main>
 
     <footer>
         <p><a href="index.html">Designers Studio Boggeri</a></p>
