--- a/index.html
+++ b/index.html
@@ -56,6 +56,18 @@
                     <a href="progetti/steiner2.html"> <img src="immagini/steiner/pirelli-adv-steiner.png" alt=""> </a>
                     <p> <strong>Contenitori Pirelli </strong><br>Albe Steiner, 1959 <br>Advertising </p>
                 </div>
+
+                <div class="card">
+                    <a href="progetti/huber4.html"> <img src="../immagini/huber/huber4.jpg" alt=""> </a>
+                    <p> <strong>Jazztime </strong><br>Max Huber, 1952 <br>Poster</p>
+                </div>
+
+                <div class="card">
+                    <a href="progetti/carboni3.html"> <img src="../immagini/carboni/carboni3.jpg" alt=""> </a>
+                    <p> <strong>Vera pasta all'uovo </strong><br>Erberto Carboni, 1953 <br>Advertising </p>
+                </div>
+
+
             </div>
             <div class="cta-container">
                 <a href="projects.html"><button class="button-cta" type="button">Scopri i Progetti</button></a>
