--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
                 </div>
 
                 <div class="card">
-                    <a href="progetti/huber4.html"> <img src="../immagini/huber/huber4.jpg" alt=""> </a>
+                    <a href="progetti/huber4.html"> <img src="immagini/huber/huber4.jpg" alt=""> </a>
                     <p> <strong>Jazztime </strong><br>Max Huber, 1952 <br>Poster</p>
                 </div>
 
                 <div class="card">
-                    <a href="progetti/carboni3.html"> <img src="../immagini/carboni/carboni3.jpg" alt=""> </a>
+                    <a href="progetti/carboni3.html"> <img src="immagini/carboni/carboni3.jpg" alt=""> </a>
                     <p> <strong>Vera pasta all'uovo </strong><br>Erberto Carboni, 1953 <br>Advertising </p>
                 </div>
 
