--- a/progetti/ballmer3.html
+++ b/progetti/ballmer3.html
@@ -29,7 +29,7 @@
     
     
         <section class="progetto">
-            <img src="../immagini/ballmer/ballmer2.webp" alt="">
+            <img src="../immagini/ballmer/ballmer3.jpg" alt="">
             <p>Walter Ballmer, 1975<br>Poster</p>
         </section>
    
