--- a/about.html
+++ b/about.html
@@ -26,14 +26,15 @@
 
         <section class="testo-progetto">
             <h2>About</h2>
-            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.
-                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.
-                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.
-                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
+            <p>Benvenuti nell'archivio online dedicato ai talentuosi designer che hanno contribuito allo sviluppo dello Studio Boggeri. Siamo un gruppo di studenti universitari del corso di "Web Design" dell'Accademia di Belle Arti di Catania, guidati dal professore <a href="https://ciroesposito.com/" target="_blank">Ciro Esposito</a>.</p>
+                
+            <p>Il nostro obiettivo principale è quello di creare uno spazio virtuale che celebra l'eredità e il lavoro di designer di talento che hanno contribuito a dare forma allo Studio Boggeri. Il sito funge da testimonianza vivente della creatività e dell'innovazione che ha caratterizzato il lavoro svolto all'interno dello studio nel corso degli anni.</p>
+                
+            <p>Il nostro team è composto da tre membri: <a href="https://www.instagram.com/gabriele_aliotta/" target="_blank">Gabriele Aliotta</a>, <a href="https://www.instagram.com/simoghirly/" target="_blank">Simone Ghirlanda</a> e <a href="https://www.instagram.com/pri.exe/" target="_blank">Gabriele Palmieri</a>. Nel nostro archivio troverete una vasta gamma di manifesti, marchi, prodotti editoriali, pubblicitari e informazioni dettagliate su ogni designer che ha contribuito al successo dello Studio Boggeri. Grazie per averci visitato e vi invitiamo a esplorare il nostro archivio e ad apprezzare l'eccezionale lavoro svolto da questi brillanti designer.</p>
         </section>
 
         <section class="email">
-            <p>ewifwoehow@gmail.com</p>
+            <p>gabrielealiotta@abacatania.it</p>
             <p>ewifwoehow@gmail.com</p>
             <p>ewifwoehow@gmail.com</p>
         </section>
