--- a/studio.html
+++ b/studio.html
@@ -44,9 +44,8 @@
             </div>
 
             <div class="testo">
-                <h2>Lo Studio</h2>
-                <p>Fondata nel 1933 da Antonio Boggeri a Milano. Lo Studio Boggeri è un capolavoro nella storia del graphic design, uno dei migliori e più importanti studi di design al mondo. 
-                    Ha collegato la grafica italiana e svizzera come nessuno ha fatto prima di portare i principi moderni alla progettazione grafica. 
+                
+                <p>Nessun'altra azienda ha avuto un gruppo così eccezionale di designer di talento: Albe Steiner, Aldo Calabresi, lo stesso Antonio Boggeri, Armando Milani, Bob Noorda, Bruno Monguzzi, Bruno Munari, Carlo Vivarelli, Enzo Mari, Erberto Carboni, Ezio Bonini, Fortunato Depero, Franco Grignani, Imre Reiner, Marcello Nizzoli, Max Huber, Remo Muratore, René Martinelli, Roberto Sambonet, Walter Ballmer, Xanti Schawinsky, e molti altri.
                     </p>     
             </div>
         </div>
