--- a/about.html
+++ b/about.html
@@ -35,8 +35,8 @@
 
         <section class="email">
             <p>gabrielealiotta@abacatania.it</p>
-            <p>ewifwoehow@gmail.com</p>
-            <p>ewifwoehow@gmail.com</p>
+            <p>simoneromanoghirlanda@abacatania.it</p>
+            <p>agatinogabrielepalmieri@abacatania.it</p>
         </section>
     </main>
 
