--- a/progetti/carboni5.html
+++ b/progetti/carboni5.html
@@ -30,7 +30,7 @@
     
     
         <section class="progetto">
-            <img src="../immagini/carboni/carboni1.png" alt="">
+            <img src="../immagini/carboni/carboni5.jpg" alt="">
             <p>Erberto Carboni, 1956<br>Poster </p>
         </section>
    
