--- a/designers.html
+++ b/designers.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Designers</title>
+    <title>Designer</title>
 </head>
 <body>
     <!-- Logo e Nav principale -->
     <header>
-        <h1 class="logo"><a href="index.html">Designers Studio Boggeri</a></h1>
+        <h1 class="logo"><a href="index.html">Designer Studio Boggeri</a></h1>
         <nav>
             <ul>
                 <li><a href="studio.html">Studio</a></li>
@@ -27,7 +27,7 @@
   <!-- Card Designer -->
   <section class="designer">
 
-    <h2>I DESIGNERS</h2>
+    <h2>I DESIGNER</h2>
     <div class="grid1">
         <div class="card1">
             <a href="designers/steiner.html"> <img src="immagini/designer/albe-steiner-foto.png" alt=""></a>
@@ -125,7 +125,7 @@
 </main>
 
 <footer>
-<p class="logo"><a href="index.html">Designers Studio Boggeri</a></p>
+<p class="logo"><a href="index.html">Designer Studio Boggeri</a></p>
 <nav>
     <ul>
         <li><a href="studio.html">Studio</a></li>
