--- a/designers/steiner.html
+++ b/designers/steiner.html
@@ -10,7 +10,7 @@
 <body>
         <!-- Logo e Nav principale -->
    <header>
-        <h1 class="logo"><a href="../index.html">Designers Studio Boggeri</a></h1>
+        <h1 class="logo"><a href="../index.html">Designer Studio Boggeri</a></h1>
         <nav>
             <ul>
                 <li><a href="../studio.html">Studio</a></li>
@@ -76,7 +76,7 @@
     </main>
 
     <footer>
-        <p class="logo"><a href="../index.html">Designers Studio Boggeri</a></p>
+        <p class="logo"><a href="../index.html">Designer Studio Boggeri</a></p>
         <nav>
             <ul>
                 <li><a href="../studio.html">Studio</a></li>
