--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Designers Studio Boggeri</title>
+    <title>Designer Studio Boggeri</title>
 </head>
 
 <body>
     <!-- Logo e Nav principale -->
    <header>
-        <h1 class="logo"><a href="index.html">Designers Studio Boggeri</a></h1>
+        <h1 class="logo"><a href="index.html">Designer Studio Boggeri</a></h1>
         <nav>
             <ul>
                 <li><a href="studio.html">Studio</a></li>
@@ -96,7 +96,7 @@
     <!-- Card Designer -->
     <section class="designer">
 
-        <h2>I DESIGNERS</h2>
+        <h2>I DESIGNER</h2>
         <div class="grid1">
             <div class="card1">
                 <a href="designers/steiner.html"> <img src="immagini/designer/albe-steiner-foto.png" alt=""></a>
@@ -129,13 +129,13 @@
             </div>
         </div>
         <div class="cta-container">
-            <a href="designers.html"><button class="button-cta" type="button">Scopri i Designers</button></a>
+            <a href="designers.html"><button class="button-cta" type="button">Scopri i Designer</button></a>
         </div>
     </section>
     </main>
 
    <footer>
-    <p class="logo"><a href="index.html">Designers Studio Boggeri</a></p>
+    <p class="logo"><a href="index.html">Designer Studio Boggeri</a></p>
     <nav>
         <ul>
             <li><a href="studio.html">Studio</a></li>
