--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
 
     <!-- Logo e Nav principale -->
     <header>
-        <h1 class="logo"><a href="index.html">Designers Studio Boggeri</a></h1>
+        <h1 class="logo"><a href="index.html">Designer Studio Boggeri</a></h1>
         <nav>
             <ul>
                 <li><a href="studio.html">Studio</a></li>
@@ -239,7 +239,7 @@
           </script>
 
     <footer>
-        <p><a href="index.html">Designers Studio Boggeri</a></p>
+        <p><a href="index.html">Designer Studio Boggeri</a></p>
         <nav>
             <ul>
                 <li><a href="studio.html">Studio</a></li>
