--- a/designers.html
+++ b/designers.html
@@ -60,27 +60,27 @@
         </div>
 
         <div class="card1">
-            <a href=""> <img src="immagini/designer/milani.png" alt=""> </a>
+            <a href="designers/milani.html"> <img src="immagini/designer/milani.png" alt=""> </a>
             <h3>Armando Milani</h3>
         </div>
 
         <div class="card1">
-            <a href=""> <img src="immagini/designer/lamm.png" alt=""> </a>
+            <a href="designers/lamm.html"> <img src="immagini/designer/lamm.png" alt=""> </a>
             <h3>Lora Lamm</h3>
         </div>
 
         <div class="card1">
-            <a href=""> <img src="immagini/designer/calabresi.png" alt=""> </a>
+            <a href="designers/calabresi.html"> <img src="immagini/designer/calabresi.png" alt=""> </a>
             <h3>Aldo Calabresi</h3>
         </div>
 
         <div class="card1">
-            <a href=""> <img src="immagini/designer/vivarelli.png" alt=""> </a>
+            <a href="designers/vivarelli.html"> <img src="immagini/designer/vivarelli.png" alt=""> </a>
             <h3>Carlo Vivarelli</h3>
         </div>
 
         <div class="card1">
-            <a href=""> <img src="immagini/designer/muratore.png" alt=""> </a>
+            <a href="designers/muratore.html"> <img src="immagini/designer/muratore.png" alt=""> </a>
             <h3>Remo Muratore</h3>
         </div>
 
