--- a/designers.html
+++ b/designers.html
@@ -85,7 +85,7 @@
         </div>
 
         <div class="card1">
-            <a href=""> <img src="immagini/designer/schawinsky.png" alt=""> </a>
+            <a href="designers/schawinsky.html"> <img src="immagini/designer/schawinsky.png" alt=""> </a>
             <h3>Xanti Schawinsky</h3>
         </div>
 
