--- a/designers.html
+++ b/designers.html
@@ -90,12 +90,12 @@
         </div>
 
         <div class="card1">
-            <a href=""> <img src="immagini/designer/noorda.png" alt=""> </a>
+            <a href="designers/noorda.html"> <img src="immagini/designer/noorda.png" alt=""> </a>
             <h3>Bob Noorda</h3>
         </div>
 
         <div class="card1">
-            <a href=""> <img src="immagini/designer/enzo-mari.png" alt=""> </a>
+            <a href="designers/mari.html"> <img src="immagini/designer/enzo-mari.png" alt=""> </a>
             <h3>Enzo Mari</h3>
         </div>
 
@@ -105,17 +105,17 @@
         </div>
 
         <div class="card1">
-            <a href=""> <img src="immagini/designer/ilimprandi.png" alt=""> </a>
+            <a href="designers/lliprandi.html"> <img src="immagini/designer/ilimprandi.png" alt=""> </a>
             <h3>Giancarlo Iliprandi</h3>
         </div>
 
         <div class="card1">
-            <a href=""> <img src="immagini/designer/monguzzi.png" alt=""> </a>
+            <a href="designers/bruno monguzzi.html"> <img src="immagini/designer/monguzzi.png" alt=""> </a>
             <h3>Bruno Monguzzi</h3>
         </div>
 
         <div class="card1">
-            <a href=""> <img src="immagini/designer/nizzoli.png" alt=""> </a>
+            <a href="designers/nizzoli.html"> <img src="immagini/designer/nizzoli.png" alt=""> </a>
             <h3>Marcello Nizzoli</h3>
         </div>
 
