--- a/designers/lliprandi.html
+++ b/designers/lliprandi.html
@@ -46,32 +46,32 @@
         <div class="grid">
             
             <div class="card">
-                <a href="../progetti/huber1.html"> <img src="../immagini/lliprandi/lliprandi1.jpeg" alt=""> </a>
+                <a href="../progetti/lliprandi1.html"> <img src="../immagini/lliprandi/lliprandi1.jpeg" alt=""> </a>
                 <p> <strong>Arflex</strong><br>Giancarlo Lliprandi, 1970 <br>Poster </p> 
             </div>
 
             <div class="card">
-                <a href="../progetti/huber2.html"> <img src="../immagini/lliprandi/lliprandi2.jpg" alt=""> </a>
+                <a href="../progetti/lliprandi2.html"> <img src="../immagini/lliprandi/lliprandi2.jpg" alt=""> </a>
                 <p> <strong>RB cucine</strong><br>Giancarlo Lliprandi, 1969 <br>Poster </p> 
             </div>
 
             <div class="card">
-                <a href="../progetti/huber3.html"> <img src="../immagini/lliprandi/lliprandi3.jpg" alt=""> </a>
+                <a href="../progetti/lliprandi3.html"> <img src="../immagini/lliprandi/lliprandi3.jpg" alt=""> </a>
                 <p> <strong>Basta una pillola </strong><br>Giancarlo Lliprandi, 1967 <br>Poster  </p>
             </div>
 
             <div class="card">
-                <a href="../progetti/huber4.html"> <img src="../immagini/lliprandi/lliprandi4.png" alt=""> </a>
-                <p> <strong>No alla violenza</strong><br>iancarlo Lliprandi, 1975 <br>Poster</p>
+                <a href="../progetti/lliprandi4.html"> <img src="../immagini/lliprandi/lliprandi4.png" alt=""> </a>
+                <p> <strong>No alla violenza</strong><br>Giancarlo Lliprandi, 1975 <br>Poster</p>
             </div>
 
             <div class="card">
-                <a href="../progetti/huber5.html"> <img src="../immagini/lliprandi/lliprandi5.jpg" alt=""> </a>
+                <a href="../progetti/lliprandi5.html"> <img src="../immagini/lliprandi/lliprandi5.jpg" alt=""> </a>
                 <p> <strong>La rinascente</strong><br>Giancarlo Lliprandi, 1964 <br>Poster </p>
             </div>
 
             <div class="card">
-                <a href="../progetti/huber6.html"> <img src="../immagini/lliprandi/lliprandi6.jpg" alt=""> </a>
+                <a href="../progetti/lliprandi6.html"> <img src="../immagini/lliprandi/lliprandi6.jpg" alt=""> </a>
                 <p> <strong>Photograpy italiana </strong><br>Giancarlo Lliprandi, 1970 <br>Copertina</p>
             </div>
         </div>
