--- a/designers/nizzoli.html
+++ b/designers/nizzoli.html
@@ -46,12 +46,12 @@
         <div class="grid">
             
             <div class="card">
-                <a href="../progetti/ballmer1.html"> <img src="../immagini/nizzoli/nizzoli2.jpg" alt=""> </a>
+                <a href="../progetti/nizzoli1.html"> <img src="../immagini/nizzoli/nizzoli2.jpg" alt=""> </a>
                 <p> <strong>Campari</strong><br>Marcello Nizzoli, 1927 <br>Poster </p>
             </div>
 
             <div class="card">
-                <a href="../progetti/ballmer2.html"> <img src="../immagini/nizzoli/nizzoli1.png" alt=""> </a>
+                <a href="../progetti/nizzoli2.html"> <img src="../immagini/nizzoli/nizzoli1.png" alt=""> </a>
                 <p> <strong>Bernocchi</strong><br>Marcello Nizzoli, 1930 <br>Poster </p>
             </div>
 
