--- a/progetti/mari2.html
+++ b/progetti/mari2.html
@@ -38,7 +38,7 @@
         <h2>Altri Progetti</h2>
         <div class="grid">
             <div class="card">
-                <a href="munari1.html"> <img src="../immagini/mari/mari1.png" alt=""> </a>
+                <a href="mari1.html"> <img src="../immagini/mari/mari1.png" alt=""> </a>
                 <p> <strong>Agip</strong><br>Bob Noorda, 1972 <br>Marchio </p>
             </div>
 
