--- a/progetti/nizzoli1.html
+++ b/progetti/nizzoli1.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Almanacco Anti-Letterario di Bompiani</title>
+    <title>Stile Olivetti</title>
 </head>
 <body>
      <!-- Logo e Nav principale -->
    <header>
-    <h1 class="logo"><a href="../index.html">Designer Studio Boggeri</a></h1>
+    <h1 class="logo"><a href="../index.html">Designers Studio Boggeri</a></h1>
     <nav>
         <ul>
             <li><a href="../studio.html">Studio</a></li>
@@ -23,14 +23,15 @@
 
 <main>
     <section class="testo-progetto">
-    <h2>Arte Programmata</h2>
-    <p>Nel contesto della copertina di "Arte Programmata", che è un libro dedicato all'arte programmata e cinetica, possiamo immaginare che Mari abbia considerato un design che riflettesse i principi e gli elementi dell'arte programmata stessa. Potrebbe aver utilizzato forme geometriche, linee dinamiche o pattern astratti per rappresentare il concetto di arte programmata.</p>
+    <h2>Campari</h2> <!-- MODIFICARE -->
+    <p>
+        I poster di Nizzoli per Campari sono caratterizzati da uno stile distintivo e vivace. Utilizzava colori audaci e vibranti, spesso con un forte uso del rosso, il colore iconico associato al marchio Campari. I suoi design erano accattivanti e giocosi, con una combinazione di elementi grafici e testi che catturavano l'attenzione del pubblico.</p> <!-- MODIFICARE -->
     </section>
     
     
         <section class="progetto">
-            <img src="../immagini/mari/mari1.png" alt="">
-            <p>Bob Noorda, 1963 <br>Marchio</p>
+            <img src="../immagini/nizzoli/nizzoli1.png" alt=""> <!-- MODIFICARE -->
+            <p> <strong>Campari</strong><br>Marcello Nizzoli, 1927 <br>Poster </p> <!-- MODIFICARE -->
         </section>
    
     <!-- altri progetti-->
@@ -38,8 +39,8 @@
         <h2>Altri Progetti</h2>
         <div class="grid">
             <div class="card">
-                <a href="mari2.html"> <img src="../immagini/mari/mari2.avif" alt=""> </a>
-                <p> <strong>Agip</strong><br>Bob Noorda, 1972 <br>Marchio </p>
+                <a href="nizzoli2.html"> <img src="../immagini/nizzoli/nizzoli2.jpg" alt=""> </a>
+                <p> <strong>Bernocchi</strong><br>Marcello Nizzoli, 1930 <br>Poster </p>
             </div>
 
         </div>
@@ -48,7 +49,7 @@
 
 
 <footer>
-    <p class="logo"><a href="../index.html">Designer Studio Boggeri</a></p>
+    <p class="logo"><a href="../index.html">Designers Studio Boggeri</a></p>
     <nav>
         <ul>
             <li><a href="../studio.html">Studio</a></li>
