--- a/progetti/noorda5.html
+++ b/progetti/noorda5.html
@@ -38,27 +38,27 @@
         <h2>Altri Progetti</h2>
         <div class="grid">
             <div class="card">
-                <a href="munari1.html"> <img src="../immagini/noorda/noorda1.png" alt=""> </a>
+                <a href="noorda1.html"> <img src="../immagini/noorda/noorda1.png" alt=""> </a>
                 <p> <strong>Agip</strong><br>Bob Noorda, 1972 <br>Marchio </p>
             </div>
 
             <div class="card">
-                <a href="munari3.html"> <img src="../immagini/noorda/noorda2.webp" alt=""> </a>
+                <a href="noorda2.html"> <img src="../immagini/noorda/noorda2.webp" alt=""> </a>
                 <p> <strong>Regione Lombardia</strong><br>Bob Noorda, 1974 <br>Marchio </p>
             </div>
 
             <div class="card">
-                <a href="munari4.html"> <img src="../immagini/noorda/noorda3.png" alt=""> </a>
+                <a href="noorda3.html"> <img src="../immagini/noorda/noorda3.png" alt=""> </a>
                 <p> <strong>Feltrinelli</strong><br>Bob Noorda, 1981 <br>Marchio </p>
             </div>
 
             <div class="card">
-                <a href="munari5.html"> <img src="../immagini/noorda/noorda4.jpeg" alt=""> </a>
+                <a href="noorda4.html"> <img src="../immagini/noorda/noorda4.jpeg" alt=""> </a>
                 <p> <strong>La Feltrinelli</strong><br>Bob Noorda, 1981 <br>Marchio </p>
             </div>
 
             <div class="card">
-                <a href="munari2.html"> <img src="../immagini/noorda/noorda6.jpeg" alt=""> </a>
+                <a href="noorda6.html"> <img src="../immagini/noorda/noorda6.jpeg" alt=""> </a>
                 <p> <strong>Lisi</strong><br>Bob Noorda, 1967 <br>Copertina</p>
             </div>
 
