--- a/designers/bruno monguzzi.html
+++ b/designers/bruno monguzzi.html
@@ -46,28 +46,28 @@
         <div class="grid">
             
             <div class="card">
-                <a href="../progetti/ballmer1.html"> <img src="../immagini/monguzzi/monguzzi1.webp" alt=""> </a>
+                <a href="../progetti/monguzzi1.html"> <img src="../immagini/monguzzi/monguzzi1.webp" alt=""> </a>
                 <p> <strong>Museo di Lugano</strong><br>Bruno Monguzzi, 1992 <br>Poster </p>
             </div>
 
             <div class="card">
-                <a href="../progetti/ballmer2.html"> <img src="../immagini/monguzzi/monguzzi2.webp" alt=""> </a>
+                <a href="../progetti/monguzzi2.html"> <img src="../immagini/monguzzi/monguzzi2.webp" alt=""> </a>
                 <p> <strong>Fragile</strong><br>Bruno Monguzzi, 1997 <br>Poster </p>
             </div>
 
             <div class="card">
-                <a href="../progetti/ballmer3.html"> <img src="../immagini/monguzzi/monguzzi3.jpg" alt=""> </a>
+                <a href="../progetti/monguzzi3.html"> <img src="../immagini/monguzzi/monguzzi3.jpg" alt=""> </a>
                 <p> <strong>Ferrari Simposium</strong><br>Bruno Monguzzi, 1996 <br>Poster </p>
             </div>
 
             <div class="card">
-                <a href="../progetti/ballmer3.html"> <img src="../immagini/monguzzi/monguzzi4.png" alt=""> </a>
+                <a href="../progetti/monguzzi4.html"> <img src="../immagini/monguzzi/monguzzi4.png" alt=""> </a>
                 <p> <strong>Alice edizioni</strong><br>Bruno Monguzzi, 1987 <br>Libro </p>
             </div>
 
             <div class="card">
-                <a href="../progetti/ballmer3.html"> <img src="../immagini/monguzzi/monguzzi5.jpg" alt=""> </a>
-                <p> <strong>Olivetti</strong><br>Walter Ballmer, 1975 <br>Poster </p>
+                <a href="../progetti/monguzzi5.html"> <img src="../immagini/monguzzi/monguzzi5.jpg" alt=""> </a>
+                <p> <strong>Cinquant'anni di carta</strong><br>Bruno Monguzzi 1961 <br>Poster </p>
             </div>
         </div>
     </section>
