--- a/progetti/lliprandi6.html
+++ b/progetti/lliprandi6.html
@@ -44,27 +44,27 @@
         <h2>Altri Progetti</h2>
         <div class="grid">
             <div class="card">
-                <a href="munari1.html"> <img src="../immagini/lliprandi/lliprandi1.jpeg" alt=""> </a>
+                <a href="lliprandi1.html"> <img src="../immagini/lliprandi/lliprandi1.jpeg" alt=""> </a>
                 <p> <strong>Arflex</strong><br>Giancarlo Lliprandi, 1970 <br>Poster </p>
             </div>
 
             <div class="card">
-                <a href="munari1.html"> <img src="../immagini/lliprandi/lliprandi2.jpg" alt=""> </a>
+                <a href="lliprandi2.html"> <img src="../immagini/lliprandi/lliprandi2.jpg" alt=""> </a>
                 <p> <strong>RB cucine</strong><br>Giancarlo Lliprandi, 1969 <br>Poster </p> 
             </div>
 
             <div class="card">
-                <a href="munari1.html"> <img src="../immagini/lliprandi/lliprandi3.jpg" alt=""> </a>
+                <a href="lliprandi3.html"> <img src="../immagini/lliprandi/lliprandi3.jpg" alt=""> </a>
                 <p> <strong>Basta una pillola </strong><br>Giancarlo Lliprandi, 1967 <br>Poster  </p>
             </div>
 
             <div class="card">
-                <a href="munari1.html"> <img src="../immagini/lliprandi/lliprandi4.png" alt=""> </a>
+                <a href="lliprandi4.html"> <img src="../immagini/lliprandi/lliprandi4.png" alt=""> </a>
                 <p> <strong>No alla violenza</strong><br>Giancarlo Lliprandi, 1975 <br>Poster</p>
             </div>
 
             <div class="card">
-                <a href="munari1.html"> <img src="../immagini/lliprandi/lliprandi5.jpg" alt=""> </a>
+                <a href="lliprandi5.html"> <img src="../immagini/lliprandi/lliprandi5.jpg" alt=""> </a>
                 <p> <strong>La rinascente</strong><br>Giancarlo Lliprandi, 1964 <br>Poster </p>
             </div>
 
