--- a/progetti/nizzoli2.html
+++ b/progetti/nizzoli2.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Almanacco Anti-Letterario di Bompiani</title>
+    <title>Stile Olivetti</title>
 </head>
 <body>
      <!-- Logo e Nav principale -->
    <header>
-    <h1 class="logo"><a href="../index.html">Designer Studio Boggeri</a></h1>
+    <h1 class="logo"><a href="../index.html">Designers Studio Boggeri</a></h1>
     <nav>
         <ul>
             <li><a href="../studio.html">Studio</a></li>
@@ -23,14 +23,16 @@
 
 <main>
     <section class="testo-progetto">
-    <h2>Arte Programmata</h2>
-    <p>Nel contesto della copertina di "Arte Programmata", che è un libro dedicato all'arte programmata e cinetica, possiamo immaginare che Mari abbia considerato un design che riflettesse i principi e gli elementi dell'arte programmata stessa. Potrebbe aver utilizzato forme geometriche, linee dinamiche o pattern astratti per rappresentare il concetto di arte programmata.</p>
+    <h2>Bernocchi</h2> <!-- MODIFICARE -->
+    <p>
+        Marcello Nizzoli ha progettato un celebre poster pubblicitario per l'azienda tessile italiana Bernocchi. Questo poster, noto come "Bernocchi", è stato creato nel 1924 ed è considerato un'icona del design grafico italiano dell'epoca.
+        Il poster "Bernocchi" di Nizzoli rappresenta una figura femminile elegante che indossa un abito realizzato con tessuti prodotti dall'azienda. La figura è ritratta in modo stilizzato e dinamico, con linee fluide che esprimono movimento e grazia. Il poster utilizza colori vivaci e contrastanti per attirare l'attenzione, con tonalità di blu, rosso e bianco predominanti.</p> <!-- MODIFICARE -->
     </section>
     
     
         <section class="progetto">
-            <img src="../immagini/mari/mari1.png" alt="">
-            <p>Bob Noorda, 1963 <br>Marchio</p>
+            <img src="../immagini/nizzoli/nizzoli2.jpg" alt=""> <!-- MODIFICARE -->
+            <p> <strong>Bernocchi</strong><br>Marcello Nizzoli, 1930 <br>Poster </p> <!-- MODIFICARE -->
         </section>
    
     <!-- altri progetti-->
@@ -38,8 +40,8 @@
         <h2>Altri Progetti</h2>
         <div class="grid">
             <div class="card">
-                <a href="mari2.html"> <img src="../immagini/mari/mari2.avif" alt=""> </a>
-                <p> <strong>Agip</strong><br>Bob Noorda, 1972 <br>Marchio </p>
+                <a href="nizzoli1.html"> <img src="../immagini/nizzoli/nizzoli1.png" alt=""> </a>
+                <p> <strong>Campari</strong><br>Marcello Nizzoli, 1927 <br>Poster </p>
             </div>
 
         </div>
@@ -48,7 +50,7 @@
 
 
 <footer>
-    <p class="logo"><a href="../index.html">Designer Studio Boggeri</a></p>
+    <p class="logo"><a href="../index.html">Designers Studio Boggeri</a></p>
     <nav>
         <ul>
             <li><a href="../studio.html">Studio</a></li>
